# Smart_arrange

./: CMakeLists.txt  README.md
cmake/: FindDarknet.cmake  FindModbus.cmake  FindSerialport.cmake  deps.cmake
lib/FindHole/: CMakeLists.txt  FindHole.cpp  FindHole.h
lib/FindScissors/: CMakeLists.txt  FindScissors.cpp  FindScissors.h
lib/FindScissors2/: CMakeLists.txt  FindScissors2.cpp  FindScissors2.h
lib/Process/: CMakeLists.txt  Process.cpp  Process.h
lib/SPAData/: CMakeLists.txt  SPAData.h
lib/SenseCamera/: CMakeLists.txt  SenseCamera.cpp  SenseCamera.h
lib/WiseComm/: CMakeLists.txt  WiseComm.cpp  WiseComm.h  WiseModbusException.cpp  WiseModbusException.h  readme.md
test/: CMakeLists.txt  Camera_test.cpp  Process_test.cpp  easy_test.cpp  find_camera2sucker.cpp  find_camera2sucker_new.cpp  find_scissors.cpp  test.yml  test_findContours.cpp  test_findHole.cpp  test_findHole2.cpp  test_findHole3.cpp  test_findScissors_calScissorPos.cpp  test_findScissors_calScissorPos_easy.cpp  test_findScissors_findContours.cpp  test_findScissors_hsvmask.cpp  test_picfindContours.cpp  test_sucker.cpp  test_takePic.cpp  test_wise_comm.cpp  test_wise_comm_2.cpp  test_yolo.cpp  trackbar.cpp
util/arrange/: CMakeLists.txt  smart_arrange.cpp
